[gd_scene load_steps=28 format=3 uid="uid://dcpcxfh7umytq"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_gc6j6"]
[ext_resource type="FontFile" uid="uid://cgts3h57wry82" path="res://Textures/Fonts/numbers_font.ttf" id="3_tcy0d"]
[ext_resource type="Script" path="res://Scenes_and_scripts/UI/MiniDiagram/mini_diagram_viewer.gd" id="4_o6nlg"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes_and_scripts/UI/Buttons/panelButton.tscn" id="6_r8qrn"]
[ext_resource type="PackedScene" uid="uid://cktgoqxrvgsh0" path="res://Scenes_and_scripts/UI/MiniDiagram/mini_diagram.tscn" id="6_y8o7g"]
[ext_resource type="Texture2D" uid="uid://bm3ag65nskhpk" path="res://Textures/UI/MiniDiagram/arrow_left.png" id="8_g4oap"]
[ext_resource type="PackedScene" uid="uid://dh4niqtuyy5o3" path="res://popup_button.tscn" id="8_nxlr3"]
[ext_resource type="Texture2D" uid="uid://cb6lapmtgwimd" path="res://Textures/UI/MiniDiagram/arrow_right.png" id="9_4bpdd"]
[ext_resource type="Script" path="res://Scenes_and_scripts/UI/MiniDiagram/filter_button.gd" id="9_twqwp"]
[ext_resource type="Texture2D" uid="uid://bvdr8f7dmjpmi" path="res://Textures/Buttons/icons/upload.png" id="9_ulpnp"]
[ext_resource type="Texture2D" uid="uid://uvh8kqauex4e" path="res://Textures/Buttons/icons/filter.png" id="9_wppln"]
[ext_resource type="PackedScene" uid="uid://d1wi0j2bloshm" path="res://Scenes_and_scripts/UI/MiniDiagram/fitlers.tscn" id="9_wtadq"]
[ext_resource type="PackedScene" uid="uid://c338whou4al23" path="res://Scenes_and_scripts/UI/Tooltip.tscn" id="10_6viqt"]
[ext_resource type="Texture2D" uid="uid://cms1u4elh5bo3" path="res://Textures/Buttons/icons/delete.png" id="11_5ck4b"]
[ext_resource type="Texture2D" uid="uid://dd8aycuymlcjg" path="res://Textures/Buttons/icons/resave.png" id="11_tsyye"]
[ext_resource type="LabelSettings" uid="uid://dlhdoknev5ekj" path="res://Resources/Themes/uppercase_and_numbers.tres" id="12_4hjgk"]
[ext_resource type="Texture2D" uid="uid://ci1qrp3pyqm6h" path="res://Textures/Buttons/icons/close.png" id="14_e44q0"]
[ext_resource type="Texture2D" uid="uid://cgfs1pdopjbh" path="res://Textures/Buttons/icons/close_hover.png" id="15_orka2"]
[ext_resource type="FontVariation" uid="uid://jg507qhg14bj" path="res://Textures/Fonts/numbers.tres" id="15_pf1e8"]
[ext_resource type="PackedScene" uid="uid://dorw3vr2amuy3" path="res://Scenes_and_scripts/Components/button_sound_component.tscn" id="16_bvagq"]
[ext_resource type="Texture2D" uid="uid://dbeck067rce7m" path="res://Textures/UI/tooltip_panel.png" id="16_dxpx2"]
[ext_resource type="Script" path="res://Scenes_and_scripts/Classes/spin_box.gd" id="17_icxsr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8mruu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_05qsh"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rcmg1"]
content_margin_top = 0.0
content_margin_bottom = 0.0
texture = ExtResource("16_dxpx2")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="Theme" id="Theme_r5caw"]
default_font = ExtResource("15_pf1e8")
default_font_size = 16
LineEdit/fonts/font = ExtResource("15_pf1e8")
LineEdit/styles/focus = null
LineEdit/styles/normal = SubResource("StyleBoxTexture_rcmg1")

[sub_resource type="ImageTexture" id="ImageTexture_uh5up"]

[node name="MiniDiagramViewer" type="Control" node_paths=PackedStringArray("delete_button", "resave_button", "title_label", "mini_diagram", "max_index_label", "index", "left", "right", "grab_area")]
material = ExtResource("1_gc6j6")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_o6nlg")
delete_button = NodePath("PanelContainer/VBoxContainer/HBoxContainer/Delete")
resave_button = NodePath("PanelContainer/VBoxContainer/HBoxContainer/Resave")
title_label = NodePath("PanelContainer/VBoxContainer/Header/VBoxSeperator/Title")
mini_diagram = NodePath("PanelContainer/VBoxContainer/CenterContainer/MiniDiagramContainer/MiniDiagram")
max_index_label = NodePath("PanelContainer/VBoxContainer/HBoxContainer/IndexContainer/MaxIndex")
index = NodePath("PanelContainer/VBoxContainer/HBoxContainer/IndexContainer/Index")
left = NodePath("PanelContainer/VBoxContainer/HBoxContainer/Left")
right = NodePath("PanelContainer/VBoxContainer/HBoxContainer/Right")
grab_area = NodePath("PanelContainer")

[node name="PanelContainer" type="PanelContainer" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -92.0
offset_right = 121.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 1

[node name="Header" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_8mruu")

[node name="VBoxSeperator" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Header"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/separation = -2
alignment = 1

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer/Header/VBoxSeperator"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_tcy0d")
theme_override_font_sizes/font_size = 16

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/Header/VBoxSeperator"]
show_behind_parent = true
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Close" type="TextureButton" parent="PanelContainer/VBoxContainer/Header"]
use_parent_material = true
custom_minimum_size = Vector2(10, 14)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("14_e44q0")
texture_hover = ExtResource("15_orka2")
stretch_mode = 5

[node name="ButtonSoundComponent" parent="PanelContainer/VBoxContainer/Header/Close" instance=ExtResource("16_bvagq")]

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/CenterContainer"]
use_parent_material = true
layout_mode = 2
text = "No diagrams to show :("

[node name="MiniDiagramContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/CenterContainer"]
material = ExtResource("1_gc6j6")
use_parent_material = true
custom_minimum_size = Vector2(230, 128)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_05qsh")

[node name="MiniDiagram" parent="PanelContainer/VBoxContainer/CenterContainer/MiniDiagramContainer" instance=ExtResource("6_y8o7g")]
use_parent_material = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Filter" parent="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer" instance=ExtResource("8_nxlr3")]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("9_twqwp")
popup_scene = ExtResource("9_wtadq")
minimum_size = Vector2(23, 23)
icon = ExtResource("9_wppln")
icon_use_parent_material = true

[node name="Left" parent="PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_r8qrn")]
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(18, 2.08165e-12)
icon = ExtResource("8_g4oap")
icon_use_parent_material = true

[node name="Load" parent="PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_r8qrn")]
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(25, 25)
icon = ExtResource("9_ulpnp")
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="PanelContainer/VBoxContainer/HBoxContainer/Load" instance=ExtResource("10_6viqt")]
tooltip = "Load Diagram"

[node name="Resave" parent="PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_r8qrn")]
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(24, 25)
icon = ExtResource("11_tsyye")
icon_use_parent_material = true

[node name="Tooltip" parent="PanelContainer/VBoxContainer/HBoxContainer/Resave" instance=ExtResource("10_6viqt")]
tooltip = "Resave diagram"

[node name="Delete" parent="PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_r8qrn")]
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(24, 25)
icon = ExtResource("11_5ck4b")
expand_icon = true
icon_use_parent_material = true

[node name="Tooltip" parent="PanelContainer/VBoxContainer/HBoxContainer/Delete" instance=ExtResource("10_6viqt")]
tooltip = "Delete Diagram"

[node name="Right" parent="PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("6_r8qrn")]
layout_mode = 2
mouse_filter = 1
minimum_size = Vector2(18, 2.08165e-12)
icon = ExtResource("9_4bpdd")
icon_use_parent_material = true

[node name="IndexContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1
alignment = 2

[node name="Index" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer/IndexContainer"]
use_parent_material = true
custom_minimum_size = Vector2(0, 17)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_r5caw")
theme_override_icons/updown = SubResource("ImageTexture_uh5up")
min_value = 1.0
value = 1.0
script = ExtResource("17_icxsr")

[node name="MaxIndex" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/IndexContainer"]
use_parent_material = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
text = "/10"
label_settings = ExtResource("12_4hjgk")
vertical_alignment = 1

[connection signal="pressed" from="PanelContainer/VBoxContainer/Header/Close" to="." method="_on_close_pressed"]
[connection signal="filters_submitted" from="PanelContainer/VBoxContainer/HBoxContainer/HBoxContainer/Filter" to="." method="_on_filter_filters_submitted"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Resave" to="." method="_on_resave_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Right" to="." method="_on_right_pressed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/IndexContainer/Index" to="." method="_on_index_value_changed"]
